--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
 
 {% block content %}
     <div class="text-center" style="">
+        <div style="padding-left: 322.6px;padding-right: 322.6px">
         <a href="#">
             <div class="post-card-container" style="background-image: url(../static/img/header.jpg);">
                 <h2>title</h2>
@@ -17,5 +18,6 @@
                 <span>第一篇文章</span>
             </div>
         </a>
+        </div>
     </div>
 {% endblock content %}
