--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TF's BLOG</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/css/mirages.min.css">
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/bootstrap.bundle.js"></script>
-    <script src="../static/js/jquery-2.1.1.min.js"></script>
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/bootstrap.bundle.js"></script>
+    <script src="/static/js/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
         .post-card-container {
@@ -26,16 +25,23 @@
         h2{
             color: white;
         }
+
+
+        {% block style %}
+        {% endblock style %}
     </style>
+
 
 </head>
 <body>
-<div class="container-fluid" {% block photo %}{% endblock photo %}background-size:100% 100%;height: 436px">
+<div class="container-fluid" style="{% block photo %}{% endblock photo %} background-size:100% 100%;height: 436px">
     <div class="row">
         <div class="col-md-auto">
-            <button type="button" class="btn btn-default" aria-label="Left Align" style="background-color: inherit">
-                <i class="fas fa-home" style="font-size: 24px"></i>
-            </button>
+            <a href="/">
+                <button type="button" class="btn btn-default" aria-label="Left Align" style="background-color: inherit">
+                    <i class="fas fa-home" style="font-size: 24px"></i>
+                </button>
+            </a>
         </div>
         <div class="col-md-1">
             <div class="dropdown">
@@ -44,14 +50,16 @@
                 </button>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenu2" id="menu" onmouseover="func1()" onmouseout="func2()">
-                    <button class="dropdown-item" type="button">技术</button>
-                    <button class="dropdown-item" type="button">生活</button>
+                    <a href="/tag/1" style="text-decoration: none;"><button class="dropdown-item" type="button">技术</button></a>
+                    <a href="/tag/2" style="text-decoration: none;"><button class="dropdown-item" type="button">生活</button></a>
                     <button class="dropdown-item" type="button"></button>
                 </div>
             </div>
         </div>
         <div class="col-md-1">
-            <button class="btn btn-secondary" style="background-color: inherit;border: 0px;">留言</button>
+            <a href="/messagewall">
+                <button class="btn btn-secondary" style="background-color: inherit;border: 0px;">留言</button>
+            </a>
         </div>
     </div>
     <!-- 标题 -->
@@ -65,29 +73,32 @@
 <!-- 内容正文 -->
 {% block content %}
 {% endblock content %}
-
+</div>
 <!-- 评论区 -->
 {% block comment %}
 {% endblock comment %}
-
-</div>
 <!-- 尾标 -->
-<div class="text-center" style="background-color: #2c2a2a">
-    <footer style="padding-top: 15px;padding-bottom: 15px">
-        <p style="color: #b0b0b0">Copyright © 2018 TF's Blog</p>
+<div class="container-fluid" style="background-color: #2c2a2a">
+    <div class="text-center" >
+        <footer style="padding-top: 20px;padding-bottom: 1px">
+            <p style="color: #b0b0b0; font-size: 15px">Copyright © 2018 TF's Blog</p>
 
-    </footer>
+        </footer>
+    </div>
 </div>
 
-<script src="../static/js/bootstrap.bundle.js"></script>
-<script src="../static/js/bootstrap.js"></script>
-<script src="../static/js/jquery-2.1.1.min.js"></script>
+<script src="/static/js/bootstrap.bundle.js"></script>
+<script src="/static/js/bootstrap.js"></script>
+<script src="/static/js/jquery-2.1.1.min.js"></script>
 <script>
     function func1() {
         $(".dropdown-menu").css("display", "block");
+        $("#dropdownMenu2").css("color", "#1abc9c");
+
     }
     function func2() {
         $(".dropdown-menu").css("display", "none");
+        $("#dropdownMenu2").css("color", "white");
     }
 </script>
 
