--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -7,54 +7,50 @@
 {% endblock photo %}
 
 {% block title %}
-<h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px">TF'S BLOG</h1>
+    <h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px">{{ title }}</h1>
 {% endblock title %}
 
 {% block content %}
     <div class="text-center" >
         <div id="firstpage">
-                {% if lenth != 0 %}
-                    {% for i in range(lenth) %}
-{#                        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
-                            <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
-                                <div class="post-card-container" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
-                                    <h2>{{ user_Post[i].Title }}</h2>
-                                    <br>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <span>{{ user_Post[i].Publish_Date }}</span>
-                                            <span style="font-weight: 500">•</span>
-                                            {% if user_Post[i].tags != None  %}
-                                                {% for i in user_Post[i].tags %}
-                                                    <span>{{ i.Title }}</span>
-                                                {% endfor %}
-                                            {% endif %}
-                                            <span></span>
-                                        </div>
+            {% if lenth != 0 %}
+                {% for i in range(lenth) %}
+                    <div style="padding-left: 322.6px;padding-right: 322.6px">
+                        <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
+                            <div class="post-card-container" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
+                                <h2>{{ user_Post[i].Title }}</h2>
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <span>{{ user_Post[i].Publish_Date }}</span>
+                                        <span style="font-weight: 500">•</span>
+                                        {% if user_Post[i].tags != None  %}
+                                            {% for i in user_Post[i].tags %}
+                                                <span>{{ i.Title }}</span>
+                                            {% endfor %}
+                                        {% endif %}
+                                        <span></span>
                                     </div>
-                                </div>
-                            </a>
-{#                        </div>#}
-                        <br>
-                        <br>
-                    {% endfor %}
-                {% else %}
+                                </div
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    <br>
+                {% endfor %}
+            {% else %}
 
-                {% endif %}
+            {% endif %}
         </div>
     </div>
 
     {% if pagination.pages >= 1 %}
-        <div class="post-card-container">
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <select id="pages" style="margin-bottom: 80px;width: 130px;height: 50px;border-radius:9px;">
-                        {% for i in range(pagination.pages) %}
-                            <option value="{{ i+1 }}" >第{{ i+1 }}页</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
+        <div align="center">
+            <select id="pages" style="margin-bottom: 80px;">
+                {% for i in range(pagination.pages) %}
+                    <option value="{{ i+1 }}" >第{{ i+1 }}页</option>
+                {% endfor %}
+            </select>
         </div>
     {% endif %}
 
