--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% endblock style %}
 
 {% block photo %}
-    background: url(../static/img/header.jpg);
+    background: url(../static/img/header2.jpg);
 {% endblock photo %}
 
 {% block title %}
@@ -17,7 +17,7 @@
                     {% for i in range(lenth) %}
 {#                        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
                             <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
-                                <div class="post-card-container" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
+                                <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
                                     <h2>{{ user_Post[i].Title }}</h2>
                                     <br>
                                     <div class="row">
@@ -115,5 +115,15 @@
             })
 
         });
+    </script>
+    <script>
+        function funcon() {
+
+        }
+        function funcout(){
+
+        }
+
+
     </script>
 {% endblock content %}
