--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock photo %}
 
 {% block title %}
-<h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px">TF'S BLOG</h1>
+<h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px; padding-bottom: 116px; margin-bottom: 0px">TF'S BLOG</h1>
 {% endblock title %}
 
 {% block content %}
@@ -59,7 +59,7 @@
     {% endif %}
 
     <div id="copy" style="visibility: hidden; display: none">
-        <div style="padding-left: 322.6px;padding-right: 322.6px">
+{#        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
             <a href="#" id="Href" style="text-decoration: none;">
                 <div class="post-card-container" id="img_url" style="background-image: url(../static/img/header.jpg);">
                     <h2 id="title"></h2>
@@ -68,7 +68,7 @@
                     <span id="tag"></span>
                 </div>
             </a>
-        </div>
+{#        </div>#}
         <br>
         <br>
     </div>
