--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -7,7 +7,7 @@
 {% endblock photo %}
 
 {% block title %}
-    <h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px">{{ title }}</h1>
+    <h1 class="text-center" style="color: white;font-size: 60px; padding-top: 116px; padding-bottom: 116px; margin-bottom: 0px">{{ title }}</h1>
 {% endblock title %}
 
 {% block content %}
