server add details.html

--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -67,7 +67,7 @@
 {% endblock title %}
 
 {% block content %}
-    <div class="text-center">
+    <div class="text-left" style="margin-left: 100px; margin-right: 100px">
         {{ content | safe }}
     </div>
 {% endblock content %}
