--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,12 @@
         h2{
             color: white;
         }
+        @font-face{
+            font-family: 华文中宋;
+            src: url("http://ttf.careyou.xin/static/font/STZHONGS.woff") format('woff');
+
+
+        }
 
 
         {% block style %}
