fifth day - 1, debug wrong url.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         }
         @font-face{
             font-family: 华文中宋;
-            src: url("http://ttf.careyou.xin/static/font/STZHONGS.woff") format('woff');
+            src: url("http://tf.careyou.xin/static/font/STZHONGS.woff") format('woff');
 
 
         }
