--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -124,7 +124,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p style="color: white;font-size: 15px">{{ comments[i].text }}</p>
+                                    <p style="color: white;font-size: 15px; line-height: 18px">{{ comments[i].text }}</p>
                                 </div>
 
                             </div>
