--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
         span{
             color: white;
         }
-        h2{
+        .posttitle{
             color: white;
         }
         @font-face{
