--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
 {#                        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
                             <a href="/post/{{ user_Post[i].Publish_Date.year }}/{{ user_Post[i].Publish_Date.month }}/{{ user_Post[i].Id }}" style="text-decoration: none;">
                                 <div class="post-card-container" onmouseover="funcon" onmouseout="funcout" style="background-image: url(../static/Upload_Files/img/{{ user_Post[i].Cover_Picture_Name }});">
-                                    <h2>{{ user_Post[i].Title }}</h2>
+                                    <h2 class="posttitle">{{ user_Post[i].Title }}</h2>
                                     <br>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -69,7 +69,7 @@
 {#        <div style="padding-left: 322.6px;padding-right: 322.6px">#}
             <a href="#" id="Href" style="text-decoration: none;">
                 <div class="post-card-container" id="img_url" style="background-image: url(../static/img/header.jpg);">
-                    <h2 id="title"></h2>
+                    <h2 class="posttitle" id="title"></h2>
                     <br>
                     <span id="date"></span>
                     <span id="tag"></span>
