sixth day - 2, change img width.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,9 @@
         .posttitle{
             color: white;
         }
+        img{
+            width: 100%;
+        }
         @font-face{
             font-family: 华文中宋;
             src: url("https://github.com/hopeaktian/blog/blob/master/app/static/font/STZHONGS.woff") format('woff');
