sixth day - 3, change background img center.

--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -59,7 +59,7 @@
 {% endblock style %}
 
 {% block photo %}
-    background: url(/static/Upload_Files/img/{{ posts.Cover_Picture_Name }});
+    background: url(/static/Upload_Files/img/{{ posts.Cover_Picture_Name }}) center;
 {% endblock photo %}
 
 {% block title %}
