--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 {% endblock style %}
 
 {% block photo %}
-    background: url(../static/img/header2.jpg);
+    background: url(../static/img/header2.jpg) center;
 {% endblock photo %}
 
 {% block title %}
