--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -3,7 +3,7 @@
 {% endblock style %}
 
 {% block photo %}
-    background: url(../static/img/header.jpg);
+    background: url(../static/img/header.jpg) center;
 {% endblock photo %}
 
 {% block title %}
