--- a/app/templates/Post_Details.html
+++ b/app/templates/Post_Details.html
@@ -68,9 +68,11 @@
 {% endblock title %}
 
 {% block content %}
+<div class="container-fluid" style="background-color: #ebebeb;padding-top: 70px;padding-bottom: 80px;">
     <div class="text-left" style="margin-left: 150px; margin-right: 150px">
         {{ content | safe }}
     </div>
+</div>
 {% endblock content %}
 
 {% block comment %}
