--- a/app/templates/tag_details.html
+++ b/app/templates/tag_details.html
@@ -11,6 +11,7 @@
 {% endblock title %}
 
 {% block content %}
+<div class="container-fluid" style="background-color: #3B3F45;padding-top: 70px;padding-bottom: 80px;">
     <div class="text-center" >
         <div id="firstpage">
             {% if lenth != 0 %}
@@ -108,4 +109,5 @@
 
         });
     </script>
+</div>
 {% endblock content %}
