--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #3B3F45;padding-top: 70px;padding-bottom: 80px;">
+<div class="container-fluid" style="background-color: #2c2a2a;padding-top: 70px;padding-bottom: 80px;">
     <div class="text-center" >
         <div id="firstpage" class="firstpage" >
                 {% if lenth != 0 %}
@@ -143,7 +143,7 @@
         <div class="text-center" >
             <footer style="padding-top: 20px;padding-bottom: 1px">
                 <label style="color: #b0b0b0;font-size: 12px;margin-right: 60px">友情链接:  </label>
-                <a href="http://git.careyou.xin" style="color: #1abc9c; margin-right: 15px; font-size: 13px">• GitHub</a>
+                <a href="http://git.careyou.xin" style="color: #1abc9c; margin-right: 15px; font-size: 13px">• MyGitHub</a>
                 <a href="http://rooins.careyou.xin" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 袋鼠共享打印</a>
                 <a href="https://me.csdn.net/ha_weii" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• Minza的博客</a>
                 <a href="https://me.csdn.net/salove_y" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 携手凡生的博客</a>
