--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -149,7 +149,7 @@
                 <a href="https://me.csdn.net/salove_y" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 携手凡生的博客</a>
                 <a href="http://blog.51cto.com/anfishr" style="color: #1abc9c; margin-right: 15px; font-size: 13px;">• 一百个小排的博客</a>
                 <br>
-                <a href="mailto:hopeaktian@foxmail.com" style="color: #CC9999; margin-right: 15px; font-size: 13px;">互加友情链接</a>
+                <a href="/addurl" style="color: #CC9999; margin-right: 15px; font-size: 13px;">互加友情链接</a>
             </footer>
         </div>
     </div>
