add access count.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,7 +101,11 @@
 {#                <button class="btn btn-secondary" style="background-color: inherit;border: 0px;">留言</button>#}
 {#            </a>#}
 {#        </div>#}
+        {% block access %}
+
+        {% endblock access %}
     </div>
+
     <!-- 标题 -->
     {% block title %}
     {% endblock title %}
