change count color.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,14 +73,14 @@
 <div class="container-fluid" style="{% block photo %}{% endblock photo %} background-repeat: no-repeat;background-size: cover">
     <div class="row">
         <div class="col-md-auto">
-            <a href="/" title="主页" id="home" onmouseover="func3()" onmouseout="func4()" style="color: white;text-decoration: none;" >
+            <a href="/" title="首页" id="home" onmouseover="func3()" onmouseout="func4()" style="color: white;text-decoration: none;" >
 {#                <button type="button" class="btn btn-secondary" aria-label="Left Align" onmouseover="func3()" onmouseout="func4()" style="background-color: inherit;border: 0px">#}
 {#                    <i id="home" class="fas fa-home" style="font-size: 24px; color: white"></i>#}
 {#                    <label style="color: white;font-size: inherit">主页</label>#}
 {#                    <img href="/static/img/logo.jpg">#}
 {#                </button>#}
                 <img src="/static/img/logo.jpg" style="width: 40px;height: 40px;border-radius:20px">
-                主页
+                首页
             </a>
         </div>
         <div class="col-md-auto">
