--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
 
 {% block access %}
     <div class="col-md-auto offset-md-7" style="text-align: right">
-        <label class="text-right" style="color: #996699; padding: 6px; font-size: 13px; margin-right: 4px; margin-bottom: 0px;margin-top: 4px">第{{ all_access }}位访客</label>
+        <label class="text-right" style="color: #01b1bec7; padding: 6px; font-size: 13px; margin-right: 4px; margin-bottom: 0px;margin-top: 4px">第{{ all_access }}次浏览</label>
     </div>
 {% endblock access %}
 
