add writer auth.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,7 +108,7 @@
     </div>
     {% if g.current_user_name != 'null' %}
         <div class="row">
-            <label style="color: red;padding-left: 20px;font-size: 12px;">({{ g.current_user_name }})</label>
+            <label style="color: red;padding-left: 20px;font-size: 12px;">({{ g.current_user_name }})</label><a href="/logout" style="font-size: 12px">&nbsp退出</a>
         </div>
     {% endif %}
 
